Fixed Contact form and spacing on all pages also added style links and fonts

--- a/theme/style.css
+++ b/theme/style.css
@@ -50,9 +50,6 @@ of relative */
   display: block;
 }
 
-#navigation .dropdown:hover{
-  display: block;
-}
 
 #navigation li:first-child {
   position: relative;
@@ -63,6 +60,28 @@ of relative */
   position: absolute;
 }
 
+.dropdown{
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content{
+  display: none;
+  position: relative;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content{
+  display: block;
+}
+
+.desc{
+  padding: 15px
+  text-align:center;
+}
 
 /* #navigation a {
   float: left;
@@ -75,8 +94,7 @@ of relative */
 
 #header{
   font-weight: bold;
-  font-size: 23px;
-  
+  padding: 15px;
 
 }
 
@@ -110,11 +128,13 @@ a {
   text-decoration: none;
 
 }
-
+img{
+  align-items: center;
+}
 /* indirect */
 ol li {
-  color: blue;
-  font-family: sans-serif;
+  color: black;
+  font-family: "Roboto Mono" , monospace;
 
 }
 
@@ -123,7 +143,25 @@ div.container{
   font-weight: bold;
   font-size: 18px;
   color: black;
+  padding: 10px;
 }
+
+.button{
+  background-color: red;
+
+}
+.button-black{
+  background-color: black;
+  border-color: black;
+}
+.button-large {
+  font-size: 1.4rem;
+  height: 4.5rem;
+  line-height: 4.5rem;
+  padding: 0 2rem;
+}
+
+
 /* all list items of the order list but filters to select only the first list item */
 ol li:first-child{
   background-color: yellow;
